Backport of SVN commit 1165532: Fix crash in column view because of a dangling pointer to a selection model. Thanks a lot to Frank Reininghaus for finding a way how to reproduce the issue and analyzing the root cause. Keeping the selection model as part of the DolphinView is not required anymore at all, as the restoring of selected items is done by m_selectedItems in the meantime.

BUG: 247618 


svn path=/branches/KDE/4.5/kdebase/apps/; revision=1165533